--- a/src/pages/the-best-va-services-for-your-business.astro
+++ b/src/pages/the-best-va-services-for-your-business.astro
@@ -502,51 +502,51 @@ const pageDescription = "As a business owner, your time is valuable. Why get bog
                       <th class="py-3 px-4 text-left font-bold">DATE ESTABLISHED</th>
                       <th class="py-3 px-4 text-left font-bold">LOCATION</th>
                       <th class="py-3 px-4 text-left font-bold">HOURLY RATE</th>
-                      <th class="py-3 px-4 text-center font-bold bg-pink-300">DEDICATED ASSISTANT</th>
+                      <th class="py-3 px-4 text-center font-bold">DEDICATED ASSISTANT</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr class="border-b border-gray-200">
-                      <td class="py-3 px-4 font-semibold bg-white">Helm</td>
+                      <td class="py-3 px-4 font-semibold bg-purple-300 text-white">Helm</td>
                       <td class="py-3 px-4 bg-white">2012</td>
                       <td class="py-3 px-4 bg-white">U.S</td>
                       <td class="py-3 px-4 bg-white">$22</td>
-                      <td class="py-3 px-4 text-center bg-pink-200">✓</td>
+                      <td class="py-3 px-4 text-center bg-white">✓</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                      <td class="py-3 px-4 font-semibold bg-white">Magic</td>
+                      <td class="py-3 px-4 font-semibold bg-purple-400 text-white">Magic</td>
                       <td class="py-3 px-4 bg-white">2015</td>
                       <td class="py-3 px-4 bg-white">U.S</td>
                       <td class="py-3 px-4 bg-white">$15</td>
-                      <td class="py-3 px-4 text-center bg-pink-200">✓</td>
+                      <td class="py-3 px-4 text-center bg-white">✓</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                      <td class="py-3 px-4 font-semibold bg-white">GetFriday</td>
+                      <td class="py-3 px-4 font-semibold bg-purple-300 text-white">GetFriday</td>
                       <td class="py-3 px-4 bg-white">2005</td>
                       <td class="py-3 px-4 bg-white">India</td>
                       <td class="py-3 px-4 bg-white">$7-$15</td>
-                      <td class="py-3 px-4 text-center bg-pink-200">✓</td>
+                      <td class="py-3 px-4 text-center bg-white">✓</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                      <td class="py-3 px-4 font-semibold bg-white">Boldly</td>
+                      <td class="py-3 px-4 font-semibold bg-purple-400 text-white">Boldly</td>
                       <td class="py-3 px-4 bg-white">2012</td>
                       <td class="py-3 px-4 bg-white">U.S</td>
                       <td class="py-3 px-4 bg-white">$59-$79</td>
-                      <td class="py-3 px-4 text-center bg-pink-200">✓</td>
+                      <td class="py-3 px-4 text-center bg-white">✓</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                      <td class="py-3 px-4 font-semibold bg-white">Prialto</td>
+                      <td class="py-3 px-4 font-semibold bg-purple-300 text-white">Prialto</td>
                       <td class="py-3 px-4 bg-white">2009</td>
                       <td class="py-3 px-4 bg-white">U.S</td>
                       <td class="py-3 px-4 bg-white">$27</td>
-                      <td class="py-3 px-4 text-center bg-pink-200">✓</td>
+                      <td class="py-3 px-4 text-center bg-white">✓</td>
                     </tr>
                     <tr>
-                      <td class="py-3 px-4 font-semibold bg-white">Virtual Assist USA</td>
+                      <td class="py-3 px-4 font-semibold bg-purple-400 text-white">Virtual Assist USA</td>
                       <td class="py-3 px-4 bg-white">2008</td>
                       <td class="py-3 px-4 bg-white">U.S</td>
                       <td class="py-3 px-4 bg-white">$36.60-$45.75</td>
-                      <td class="py-3 px-4 text-center bg-pink-200">✓</td>
+                      <td class="py-3 px-4 text-center bg-white">✓</td>
                     </tr>
                   </tbody>
                 </table>
