--- a/src/pages/the-best-va-services-for-your-business.astro
+++ b/src/pages/the-best-va-services-for-your-business.astro
@@ -497,7 +497,7 @@ const pageDescription = "As a business owner, your time is valuable. Why get bog
               <div class="overflow-x-auto mb-12">
                 <table class="w-full border-collapse bg-white shadow-lg rounded-lg overflow-hidden">
                   <thead>
-                    <tr class="bg-sky-400 text-white">
+                    <tr class="text-white" style="background-color: #61AEF4;">
                       <th class="py-3 px-4 text-left font-bold">COMPANY</th>
                       <th class="py-3 px-4 text-left font-bold">DATE ESTABLISHED</th>
                       <th class="py-3 px-4 text-left font-bold">LOCATION</th>
