--- a/src/pages/free-resources/index.astro
+++ b/src/pages/free-resources/index.astro
@@ -121,7 +121,7 @@ const contentTypes = [
                       `/${post.slug}/`
                     } class="block group h-full">
                       <article class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 h-full flex flex-col">
-                        <div class="overflow-hidden bg-gray-100 relative" style="height: 225px;">
+                        <div class="overflow-hidden bg-gray-100" style="height: 225px;">
                           {post.data.image && (
                             <img
                               src={post.data.image}
@@ -130,15 +130,13 @@ const contentTypes = [
                               loading="lazy"
                             />
                           )}
-                          <div class="absolute top-4 left-4">
-                            {post.data.tags && post.data.tags.length > 0 && (
-                              <span class="inline-block px-4 py-1.5 bg-yellow-400 text-brand-navy text-xs font-bold rounded shadow-sm">
-                                {post.data.tags[post.data.tags.length - 1]}
-                              </span>
-                            )}
-                          </div>
                         </div>
                         <div class="p-6 flex flex-col flex-1">
+                          {post.data.tags && post.data.tags.length > 0 && (
+                            <span class="inline-block px-4 py-1.5 bg-yellow-400 text-brand-navy text-xs font-bold rounded shadow-sm mb-3 w-fit">
+                              {post.data.tags[post.data.tags.length - 1]}
+                            </span>
+                          )}
                           <h3 class="text-xl font-bold text-brand-navy mb-3 group-hover:text-brand-orange transition-colors leading-tight">
                             {post.data.title}
                           </h3>
